update homework-2 notebook

--- a/02-experiment-tracking/homework-2/homework/homework-2.ipynb
+++ b/02-experiment-tracking/homework-2/homework/homework-2.ipynb
@@ -75,7 +75,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 3- Train a model with autolog"
+    "### Question 3- Train a model with autolog- What is the value of the `max_depth` parameter?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Answer to question 3, max_depth parameter is 10!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 4-Tune model hyperparameters - What's the best validation RMSE that you got?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Answer to question 4, best run with lowest rmse is whose rmse value corresponds to 2.456!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 5-Promote the best model to the model registry- What is the test RMSE of the best model?"
    ]
   },
   {
@@ -83,7 +115,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"The model and run that I promoted to be the best model doesn't have equal metrics,\n",
+    " as the best model had a RMSE value of 2.285 and the closest option is 2.185,\n",
+    " which I'll pick that one\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 6- Now explore your best model in the model registry using UI. What information does the model registry contain about each model?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Answer: `All the above answers are correct`\n"
+   ]
   },
   {
    "cell_type": "code",
